update chates board ref to esp-box-3

--- a/main/boards/du-chates/config.json
+++ b/main/boards/du-chates/config.json
@@ -2,7 +2,7 @@
     "target": "esp32s3",
     "builds": [
         {
-            "name": "du-chatx",
+            "name": "du-chates",
             "sdkconfig_append": []
         }
     ]
